Updated code to Java 11 and modularized project
Updated code to Java 11
Added modul declaration to each sub-module